force-app/main/default/objects/Vehicles__c/fields/Last_Odometer_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Last_Odometer_Mileage__c</fullName>
    <label>Last Odometer Mileage</label>
    <summarizedField>Vehicle_Inspection_Checklist__c.Odometer__c</summarizedField>
    <summaryForeignKey>Vehicle_Inspection_Checklist__c.Vehicle__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>