force-app/main/default/objects/Vehicles__c/fields/OH_Fully_Burden__c.field-meta.xml
<CustomField>
    <fullName>OH_Fully_Burden__c</fullName>
    <formula>(OH_Load__c *  OH_Load_PM__c) + OH_Load__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OH Fully Burden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>