force-app/main/default/objects/Vehicles__c/fields/OH_Load__c.field-meta.xml
<CustomField>
    <fullName>OH_Load__c</fullName>
    <inlineHelpText>Work center load to account for SG&amp;A, OPEX, CAPEX</inlineHelpText>
    <label>OH Load</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>