force-app/main/default/objects/Vehicles__c/fields/OH_Load_PM__c.field-meta.xml
<CustomField>
    <fullName>OH_Load_PM__c</fullName>
    <inlineHelpText>Overhead Load Profit Margin</inlineHelpText>
    <label>OH Load PM</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>