force-app/main/default/objects/Vehicles__c/fields/Refrigerated__c.field-meta.xml
<CustomField>
    <fullName>Refrigerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refrigerated</label>
    <type>Checkbox</type>
</CustomField>