force-app/main/default/objects/Vehicles__c/fields/Tag_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_Expiration_Date__c</fullName>
    <label>Tag Expiration Date</label>
    <type>Date</type>
</CustomField>