force-app/main/default/objects/Vehicles__c/fields/Usable_Cubic_Volume__c.field-meta.xml
<CustomField>
    <fullName>Usable_Cubic_Volume__c</fullName>
    <formula>Vehicle_Cubic_Volume_Capacity__c *  Usable_CV_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vehicle usage space factor * vehicle usable ratio</inlineHelpText>
    <label>Usable Cubic Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>