force-app/main/default/objects/Vehicles__c/fields/Usable_CV_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Usable_CV_Ratio__c</fullName>
    <inlineHelpText>Vehicle factor for usable cargo space</inlineHelpText>
    <label>Usable CV Ratio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>