force-app/main/default/objects/Vehicles__c/fields/Usable_DIM_Weight__c.field-meta.xml
<CustomField>
    <fullName>Usable_DIM_Weight__c</fullName>
    <formula>Usable_Cubic_Volume__c / 139</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cubic Volume * by 166 or 139 Factor</inlineHelpText>
    <label>Usable DIM Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>