force-app/main/default/objects/Vehicles__c/fields/Vehicle_Cubic_Volume_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Cubic_Volume_Capacity__c</fullName>
    <formula>Vehicle_Height__c *  Vehicle_Width__c *  Vehicle_Length__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Cubic Volume Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>