force-app/main/default/objects/Vehicles__c/fields/Vehicle_Height__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Height__c</fullName>
    <label>Vehicle Height</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>