force-app/main/default/objects/Vehicles__c/fields/Vehicle_in_Use__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_in_Use__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Vehicle in Use</label>
    <type>Checkbox</type>
</CustomField>