force-app/main/default/objects/Vehicles__c/fields/Vehicle_License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_License_Plate_Number__c</fullName>
    <label>Vehicle LPN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>