force-app/main/default/objects/Vehicles__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chevy Express</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>F150</fullName>
            </value>
            <value>
                <fullName>Forester XT</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>NV200</fullName>
            </value>
            <value>
                <fullName>Prius Hybrid</fullName>
            </value>
            <value>
                <fullName>ProMaster 1500</fullName>
            </value>
            <value>
                <fullName>Sprinter</fullName>
            </value>
            <value>
                <fullName>T1500</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>GMC 1500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>