force-app/main/default/objects/Vehicles__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <inlineHelpText>Vehicle Identification Number</inlineHelpText>
    <label>VIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>