force-app/main/default/objects/Vehicles__c/listViews/All_Fleet.listView-meta.xml
<ListView>
    <fullName>All_Fleet</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_in_Use__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Vehicle_Make__c</columns>
    <columns>Vehicle_License_Plate_Number__c</columns>
    <columns>Vehicle_Height__c</columns>
    <columns>Vehicle_Width__c</columns>
    <columns>Vehicle_Length__c</columns>
    <columns>Vehicle_Cubic_Volume_Capacity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fleet</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>