force-app/main/default/objects/Vehicles__c/listViews/In_Use.listView-meta.xml
<ListView>
    <fullName>In_Use</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_in_Use__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Vehicle_Make__c</columns>
    <columns>Vehicle_License_Plate_Number__c</columns>
    <columns>VIN__c</columns>
    <columns>Vehicle_Height__c</columns>
    <columns>Vehicle_Width__c</columns>
    <columns>Vehicle_Length__c</columns>
    <columns>Usable_Cubic_Volume__c</columns>
    <columns>Last_Odometer_Mileage__c</columns>
    <columns>Tag_Expiration_Date__c</columns>
    <columns>Refrigerated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_in_Use__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>In Use</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Delivery_Specialist</group>
    </sharedTo>
</ListView>